# HomeWork_2_Web

./: dockerfile  notes.json  pyproject.toml
Personal_assistant/: main.py
Personal_assistant/AdressBook/: AB.py  prompt_tool.py
Personal_assistant/Map/: Map.py
Personal_assistant/NoteBook/: NB.py
